updates gitconfig under dotbot control

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -9,6 +9,7 @@
     ~/.config/nvim/init.vim: nvimrc
     ~/.dircolors: dircolors
     ~/.fzf.zsh: fzf.zsh
+    ~/.gitconfig: gitconfig
     ~/.tmux.conf: tmux.conf
     ~/.tmux/jph.tmuxcolors: jph.tmuxcolors
     ~/.vimrc: vimrc
