fixes colors for updated tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,9 @@
 set-option -g prefix C-a
 unbind-key C-b
 
+# source .tmux.conf file
+bind r source-file ~/.tmux.conf \; display "Configuration Reloaded!"
+
 # statusbar
 #set-option -g   status-utf8 on
 set-option -g   status-interval 5
@@ -13,3 +16,4 @@ set -g status-right " | #(TZ=UTC date -u +%%Y-%%m-%%d\\ %%H:%%M) UTC  "
 run-shell ~/git/tmux-sensible/sensible.tmux
 run-shell ~/git/tmux-yank/yank.tmux
 source ~/.tmux/jph.tmuxcolors
+#source ~/.tmux/test.tmuxcolors
