--- a/tmux.conf
+++ b/tmux.conf
@@ -4,6 +4,9 @@ unbind-key C-b
 # source .tmux.conf file
 bind r source-file ~/.tmux.conf \; display "Configuration Reloaded!"
 
+#
+set-option -sa terminal-overrides ',xterm*:RGB'
+
 # statusbar
 #set-option -g   status-utf8 on
 set-option -g   status-interval 5
