changes tmux config, destroying the last shell in a session will switch to another active session

--- a/tmux.conf
+++ b/tmux.conf
@@ -16,6 +16,9 @@ set-option -g   status-left ' #h |'
 #set-option -g   status-right ' | %Y-%m-%d %H:%M #[default]'
 set -g status-right " | #(TZ=UTC date -u +%%Y-%%m-%%d\\ %%H:%%M) UTC  "
 
+# destroying the last shell in a session will switch to another active session
+set-option -g detach-on-destroy off
+
 run-shell ~/git/tmux-sensible/sensible.tmux
 run-shell ~/git/tmux-yank/yank.tmux
 source ~/.tmux/jph.tmuxcolors
