sets timeout and default-terminal

--- a/tmux.conf
+++ b/tmux.conf
@@ -6,6 +6,8 @@ bind r source-file ~/.tmux.conf \; display "Configuration Reloaded!"
 
 #
 set-option -sa terminal-overrides ',xterm*:RGB'
+set-option -sg escape-time 10
+set-option -g default-terminal "screen-256color"
 
 # statusbar
 #set-option -g   status-utf8 on
