adds history limit to tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -25,3 +25,5 @@ run-shell ~/git/petong-dotfiles/tmux-sensible/sensible.tmux
 run-shell ~/git/petong-dotfiles/tmux-yank/yank.tmux
 source ~/.tmux/jph.tmuxcolors
 #source ~/.tmux/test.tmuxcolors
+
+set-option -g history-limit 100000
