adds powerlevel10k and remove pure

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -17,6 +17,7 @@
     ~/.zprofile: zprofile
     ~/.zsh: zsh
     ~/.zshrc: zshrc
+    ~/.p10k.zsh: p10k.zsh
 
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
