--- a/tmux.conf
+++ b/tmux.conf
@@ -23,6 +23,7 @@ set-option -g detach-on-destroy off
 
 run-shell ~/git/petong-dotfiles/tmux/tmux-sensible/sensible.tmux
 run-shell ~/git/petong-dotfiles/tmux/tmux-yank/yank.tmux
+run-shell ~/git/petong-dotfiles/tmux/tmux-logging/logging.tmux
 source ~/.tmux/jph.tmuxcolors
 #source ~/.tmux/test.tmuxcolors
 
