--- a/tmux.conf
+++ b/tmux.conf
@@ -21,10 +21,21 @@ set -g status-right " | #(TZ=UTC date -u +%%Y-%%m-%%d\\ %%H:%%M) UTC  "
 # destroying the last shell in a session will switch to another active session
 set-option -g detach-on-destroy off
 
-run-shell ~/git/petong-dotfiles/tmux/tmux-sensible/sensible.tmux
-run-shell ~/git/petong-dotfiles/tmux/tmux-yank/yank.tmux
-run-shell ~/git/petong-dotfiles/tmux/tmux-logging/logging.tmux
 source ~/.tmux/jph.tmuxcolors
 #source ~/.tmux/test.tmuxcolors
 
-set-option -g history-limit 100000
+set-option -g history-limit 100001
+
+
+#run-shell ~/git/petong-dotfiles/tmux/tmux-sensible/sensible.tmux
+#run-shell ~/git/petong-dotfiles/tmux/tmux-yank/yank.tmux
+#run-shell ~/git/petong-dotfiles/tmux/tmux-logging/logging.tmux
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-logging'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
