adds alt + . mapping

--- a/alacritty.yml
+++ b/alacritty.yml
@@ -711,6 +711,7 @@ key_bindings:
   - { key: B,  mods: Alt,           chars: "\x1bb"                       }
   # https://github.com/jwilm/alacritty/issues/93#issuecomment-427592040
   - { key: D,  mods: Alt,           chars: "\x1bd"                       }
+  - { key: Period,   mods: Alt,     chars: "\x1b\x2e"                    }
 
 
   #- { key: Paste,                                       action: Paste          }
