fixes cheat paths

--- a/cheat.conf.yml
+++ b/cheat.conf.yml
@@ -44,14 +44,14 @@ cheatpaths:
   # Once downloaded, ensure that 'path' below points to the location at which
   # you downloaded the community cheatsheets.
   - name: community
-    path: ~/.cheat/cheatsheets
+    path: ~/.config/cheat/cheatsheets
     tags: [ community ]
     readonly: true
 
   # If you have personalized cheatsheets, list them last. They will take
   # precedence over the more global cheatsheets.
   - name: personal
-    path: ~/.cheat/jph
+    path: ~/.config/cheat/jph
     tags: [ jph ]
     readonly: false
 
