--- a/cheat.conf.yml
+++ b/cheat.conf.yml
@@ -14,6 +14,9 @@ style: monokai
 # One of: "terminal", "terminal256", "terminal16m"
 formatter: terminal16m
 
+# Through which pager should output be piped? (Unset this key for no pager.)
+pager: less -FRX
+
 # The paths at which cheatsheets are available. Tags associated with a cheatpath
 # are automatically attached to all cheatsheets residing on that path.
 #
@@ -55,9 +58,12 @@ cheatpaths:
     tags: [ jph ]
     readonly: false
 
-
-
-
-
-#
-#---
+  # While it requires no configuration here, it's also worth noting that
+  # 'cheat' will automatically append directories named '.cheat' within the
+  # current working directory to the 'cheatpath'. This can be very useful if
+  # you'd like to closely associate cheatsheets with, for example, a directory
+  # containing source code.
+  #
+  # Such "directory-scoped" cheatsheets will be treated as the most "local"
+  # cheatsheets, and will override less "local" cheatsheets. Likewise,
+  # directory-scoped cheatsheets will always be editable ('readonly: false').
