--- a/alacritty.yml
+++ b/alacritty.yml
@@ -790,6 +790,8 @@ key_bindings:
   - { key: Backslash, mods: Alt,       chars: "\x1b\\"                      } # Alt + \
   - { key: Slash,     mods: Alt,       chars: "\x1b/"                       } # Alt + /
   - { key: Backslash, mods: Alt|Shift, chars: "\x1b|"                       } # Alt + |
+    # - { key: Key0, mods: Control, chars: "\x1b[48;5u" }
+  - { key: Key6,        mods: Control, chars: "\x1e"                     }
 
 
   #- { key: Paste,                                       action: Paste          }
