sorts plugins and adds tmux-resurrect

--- a/tmux.conf
+++ b/tmux.conf
@@ -5,7 +5,7 @@ unbind-key C-b
 bind r source-file ~/.tmux.conf \; display "Configuration Reloaded!"
 
 #
-set-option -sa terminal-overrides ',xterm*:RGB'
+set-option -sa terminal-overrides ',alacritty*:RGB'
 set-option -sg escape-time 10
 set-option -g default-terminal "screen-256color"
 
@@ -32,12 +32,13 @@ set-option -g history-limit 100001
 #run-shell ~/git/petong-dotfiles/tmux/tmux-logging/logging.tmux
 
 # List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-logging'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-sessionist'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tpm'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
