--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,6 +7,7 @@
 
 - create:
     - ~/.config/cheat
+      ~/.hammerspoon
 
 - link:
     ~/.alacritty.yml: alacritty.yml
@@ -17,6 +18,10 @@
     ~/.dircolors: dircolors
     ~/.gitconfig: gitconfig
     ~/.hammerspoon/init.lua: hammerspoon/init.lua
+    ~/.hammerspoon/:
+      if: '[ `uname` = Darwin ]'
+      path: hammerspoon/**
+      glob: true
     ~/.kube/kubie.yaml: kubie.yaml
     ~/.p10k.zsh: p10k.zsh
     ~/.ssh/config: ssh_config
