--- a/tmux.conf
+++ b/tmux.conf
@@ -9,6 +9,9 @@ set-option -sa terminal-overrides ',alacritty*:RGB'
 set-option -sg escape-time 10
 set-option -g default-terminal "screen-256color"
 
+# use vi keybindings
+set-window-option -g mode-keys vi
+
 # statusbar
 #set-option -g   status-utf8 on
 set-option -g   status-interval 5
