--- a/alacritty.yml
+++ b/alacritty.yml
@@ -115,7 +115,8 @@ font:
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
     #family: Menlo
-    family: Inconsolata for Powerline
+    #family: Inconsolata for Powerline
+    family: Inconsolata Nerd Font
 
     # The `style` can be specified to pick a specific face.
     style: Medium
