--- a/alacritty.yml
+++ b/alacritty.yml
@@ -119,7 +119,7 @@ font:
     family: Inconsolata Nerd Font
 
     # The `style` can be specified to pick a specific face.
-    style: Medium
+    style: Regular
 
   # Bold font face
   #bold:
