sets C-a G to fire up lazygit

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,8 +4,12 @@ unbind-key C-b
 # source .tmux.conf file
 bind r source-file ~/.tmux.conf \; display "Configuration Reloaded!"
 
+# fun lazygit in current directory
+bind-key G new-window -c "#{pane_current_path}" "lazygit"
+
+
 #
-set-option -sa terminal-overrides ',alacritty*:RGB'
+set-option -ag terminal-overrides ',xterm-256color:RGB'
 set-option -sg escape-time 10
 set-option -g default-terminal "screen-256color"
 
