--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,7 +7,7 @@
 
 - create:
     - ~/.config/cheat
-      ~/.config/nvim
+      ~/.config/tmux
       ~/.hammerspoon
       ~/Documents/ScreenShots
 
@@ -25,8 +25,11 @@
       path: ~/iCloudDrive/cheat/jph
     ~/.config/cheat/cheatsheets:
       path: cheatsheets
-    ~/.config/nvim/init.vim:
-      path: nvimrc
+    ~/.config/tmux/tmux.conf:
+      path: tmux/tmux.conf
+     ~/.config/tmux/tpm:
+      relink: true
+      path: tmux/tpm
     ~/.dircolors:
       path: dircolors
     ~/.gitconfig:
@@ -42,12 +45,6 @@
     ~/.ssh/config:
       if: '[ `uname` = Darwin ]'
       path: ~/iCloudDrive/ssh/config
-    ~/.tmux.conf:
-      path: tmux.conf
-    ~/.tmux/jph.tmuxcolors:
-      path: jph.tmuxcolors
-    ~/.tmux/plugins/tpm:
-      path: tmux/tpm
     ~/.vimrc:
       path: vimrc
     ~/.config/yamllint/config:
@@ -63,4 +60,4 @@
 
 - shell:
     - [git submodule update --init --recursive, Installing submodules]
-    - [scripts/customize_osx.sh]
+      #- [scripts/customize_osx.sh]
