--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,38 +7,42 @@ set -g prefix ^A
 set -g base-index 1              # start indexing windows at 1 instead of 0
 set -g detach-on-destroy off     # don't exit from tmux when closing a session
 set -g escape-time 0             # zero-out escape time delay
-set -g history-limit 1000000     # increase history size (from 2,000)
+set -g history-limit 100000      # increase history size (from 2,000)
 set -g renumber-windows on       # renumber all windows when any window is closed
 set -g set-clipboard on          # use system clipboard
-set -g status-position top       # macOS / darwin style
+set -g status-position bottom       # macOS / darwin style
 #set -g status-right " | #(TZ=UTC date -u +%%Y-%%m-%%d\\ %%H:%%M) UTC  "
-set -g renumber-windows on    # renumber windows when a window is closed
 set -g status-interval 1
 setw -g pane-base-index 1     # make pane numbering consistent with windows
 
+bind A switch-client -l
+
 # split current window horizontally
-bind - split-window -v
-# split current window vertically
-bind | split-window -h
+#bind - split-window -v -c "#{pane_current_path}"
+#bind _ split-window -v
+## split current window vertically
+#bind | split-window -h -c "#{pane_current_path}"
 
 #source ~/.config/tmux/jph.tmuxcolors
 
 setw -g mode-keys vi
 
-#set -g pane-active-border-style 'fg=magenta,bg=default'
-#set -g pane-border-style 'fg=brightblack,bg=default'
+set -g pane-active-border-style 'fg=magenta,bg=default'
+set -g pane-border-style 'fg=brightblack,bg=default'
 
 # plugins
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'sainnhe/tmux-fzf'
-#set -g @plugin 'dracula/tmux'
 set -g @plugin 'catppuccin/tmux'
 #set -g @catppuccin_status_modules_right "application "
 
+# tmux-continuum
+set -g @continuum-restore 'on'
 
 set -g @catppuccin_status_modules_right "date_time"
 set -g @catppuccin_directory_text "#{pane_current_path}"
