--- a/alacritty.toml
+++ b/alacritty.toml
@@ -56,7 +56,7 @@ live_config_reload = true
 # args = ["-l"]
 
 [shell]
-program = "/usr/bin/zsh"
+program = "/bin/zsh"
 args = ["-l"]
 
 
@@ -156,7 +156,7 @@ args = ["-l"]
 # Prefer resizing window by discrete steps equal to cell dimensions.
 # Default: false
 
-# option_as_alt = "OnlyLeft" | "OnlyRight" | "Both" | "None" # (macos only)
+#option_as_alt = "Both"
 # Make Option key behave as Alt.
 # Default: "None"
 
@@ -175,6 +175,7 @@ decorations_theme_variant = "None"
 decorations = "Full"
 opacity = 1
 blur = false
+option_as_alt = "Both"
 
 
 # SCROLLING
@@ -885,6 +886,7 @@ hide_when_typing = false
 # ]
 
 #[keyboard]
+
 
 
 # DEBUG
