--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -27,8 +27,8 @@ bind A switch-client -l
 
 setw -g mode-keys vi
 
-set -g pane-active-border-style 'fg=magenta,bg=default'
-set -g pane-border-style 'fg=brightblack,bg=default'
+#set -g pane-active-border-style 'fg=magenta,bg=default'
+#set -g pane-border-style 'fg=brightblack,bg=default'
 
 # plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -47,6 +47,7 @@ set -g @continuum-restore 'on'
 set -g @catppuccin_status_modules_right "date_time"
 set -g @catppuccin_directory_text "#{pane_current_path}"
 set -g @catppuccin_date_time_text '#(TZ="UTC" date +"%%Y-%%m-%%d %%H:%%M UTC")'
+set -g @catppuccin_directory_color "#A0759A"
 
 # always run last
 run '~/.config/tmux/tpm/tpm
