fixed truecolor in nvim

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,7 +1,8 @@
 bind r source-file ~/.config/tmux/tmux.conf \; display "Configuration Reloaded!"
-set-option -g default-terminal 'screen-254color'
+set-option -g default-terminal 'tmux-256color'
+set-option -a terminal-features 'xterm-256color:RGB'
 
-set -g default-terminal "${TERM}"
+#set -g default-terminal "${TERM}"
 
 set -g prefix ^A
 set -g base-index 1              # start indexing windows at 1 instead of 0
