--- a/alacritty.toml
+++ b/alacritty.toml
@@ -67,8 +67,8 @@ args = ["-l"]
 # [env]
 # WINIT_X11_SCALE_FACTOR = "1.0"
 
-#[env]
-
+[env]
+TERM = "xterm-256color"
 
 # WINDOW
 # This section documents the [window] table of the configuration file.
