alacritty maximized no decorations

--- a/alacritty.toml
+++ b/alacritty.toml
@@ -168,11 +168,11 @@ args = ["-l"]
 # opacity = 0.9
 
 [window]
-startup_mode = "Windowed"
+startup_mode = "Maximized"
 title = "Alacritty"
 dynamic_title = true
 decorations_theme_variant = "None"
-decorations = "Full"
+decorations = "None"
 opacity = 1
 blur = false
 option_as_alt = "Both"
