--- a/tmux.conf
+++ b/tmux.conf
@@ -9,9 +9,9 @@ bind-key G new-window -c "#{pane_current_path}" "lazygit"
 
 
 #
-set-option -ag terminal-overrides ',xterm-256color:RGB'
+set-option -ag terminal-overrides ',screen-256color:RGB'
 set-option -sg escape-time 10
-set-option -g default-terminal "screen-256color"
+#set-option -g default-terminal "screen-256color"
 
 # use vi keybindings
 set-window-option -g mode-keys vi
@@ -23,7 +23,7 @@ set-option -g   status-justify left
 set-option -g   status-left-length 20
 set-option -g   status-left ' #h | '
 #set-option -g   status-right ' | %Y-%m-%d %H:%M #[default]'
-set -g status-right " | #(TZ=UTC date -u +%%Y-%%m-%%d\\ %%H:%%M) UTC  "
+#set -g status-right " | #(TZ=UTC date -u +%%Y-%%m-%%d\\ %%H:%%M) UTC  "
 
 # destroying the last shell in a session will switch to another active session
 set-option -g detach-on-destroy off
@@ -34,6 +34,7 @@ source ~/.tmux/jph.tmuxcolors
 set-option -g history-limit 100001
 
 # List of plugins
+set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-logging'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
@@ -41,6 +42,11 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-sessionist'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tpm'
+
+
+
+set -g @catppuccin_status_modules_left "date_time"
+set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M:%S"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
