--- a/alacritty.toml
+++ b/alacritty.toml
@@ -169,6 +169,7 @@ TERM = "xterm-256color"
 
 [window]
 startup_mode = "SimpleFullscreen"
+# startup_mode = "Maximized"
 title = "Alacritty"
 dynamic_title = true
 decorations_theme_variant = "None"
@@ -176,6 +177,8 @@ decorations = "Full"
 opacity = 1
 blur = false
 option_as_alt = "Both"
+dynamic_padding = true
+padding = { x = 5, y = 5 }
 
 
 # SCROLLING
@@ -232,9 +235,18 @@ multiplier = 3
 # Default: true
 
 [font]
-normal = { family = "Inconsolata Nerd Font", style = "Regular" }
-size = 13
+# normal = { family = "JetBrainsMono Nerd Font", style = "Regular" }
+# bold   = { family = "JetBrainsMono Nerd Font", style = "Bold" }
+# italic   = { family = "JetBrainsMono Nerd Font", style = "Italic" }
+# bold_italic   = { family = "JetBrainsMono Nerd Font", style = "Bold Italic" }
+size = 12
 builtin_box_drawing = true
+# normal = { family = "Inconsolata Nerd Font", style = "Regular" }
+normal = { family = "BlexMono Nerd Font Mono", style = "Regular" }
+# normal = { family = "Hack Nerd Font", style = "Regular" }
+# bold = { family = "Hack Nerd Font", style = "Bold" }
+# italic = { family = "Hack Nerd Font", style = "Italic" }
+# bold_italic = { family = "Hack Nerd Font", style = "Bold Italic" }
 
 # COLORS
 # This section documents the [colors] table of the configuration file.
