--- a/alacritty.toml
+++ b/alacritty.toml
@@ -178,8 +178,8 @@ decorations = "Full"
 opacity = 1
 blur = false
 option_as_alt = "Both"
-dynamic_padding = true
-padding = { x = 10, y = 30 }
+# dynamic_padding = true
+# padding = { x = 10, y = 30 }
 
 
 # SCROLLING
