--- a/alacritty.toml
+++ b/alacritty.toml
@@ -168,7 +168,7 @@ TERM = "xterm-256color"
 # opacity = 0.9
 
 [window]
-startup_mode = "Maximized"
+startup_mode = "Fullscreen"
 title = "Alacritty"
 dynamic_title = true
 decorations_theme_variant = "None"
