--- a/jph.omp.yaml
+++ b/jph.omp.yaml
@@ -1,72 +1,74 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/JanDeDobbeleer/oh-my-posh/main/themes/schema.json
 
-version: 2
-console_title_template: "{{if .Root}}(Admin){{end}} {{.PWD}}"
-blocks:
-  - type: prompt
-    alignment: left
-    segments:
-      - type: session
-        style: plain
-        foreground: "#BF616A"
-        template: "{{ .UserName }} "
-      - type: path
-        style: plain
-        foreground: "#81A1C1"
-        template: "{{ .Path }} "
-        properties:
-          style: full
-  - type: prompt
-    alignment: left
-    segments:
-      - type: git
-        style: plain
-        foreground: "#6C6C6C"
-        template: "{{ .UpstreamIcon }}{{ .HEAD }}{{if .BranchStatus }} {{ .BranchStatus }}{{ end }}{{ if .Working.Changed }}<#FFAFD7>*</>{{ .Working.String }}{{ end }}{{ if and (.Working.Changed) (.Staging.Changed) }} |{{ end }}{{ if .Staging.Changed }} \uf046 {{ .Staging.String }}{{ end }}{{ if gt .StashCount 0 }} \ueb4b {{ .StashCount }}{{ end }} "
-        properties:
-          branch_ahead_icon: "<#88C0D0>⇡ </>"
-          branch_behind_icon: "<#88C0D0>⇣ </>"
-          branch_icon: ""
-          fetch_stash_count: true
-          fetch_status: true
-          fetch_upstream_icon: true
-          github_icon: ""
-  - type: prompt
-    alignment: right
-    segments:
-      - type: text
-        style: plain
-        foreground: "#81A1C1"
-        template: '{{ if env "AWS_PROFILE" }}{{- env "AWS_PROFILE" -}}{{ end -}}'
-      # - type: aws
-      #   style: powerline
-      #   powerline_symbol: 
-      #   foreground: "#ffffff"
-      #   background: "#FFA400"
-      #   template: "  {{.Profile}}{{if .Region}}@{{.Region}}{{end}}"
-  - type: prompt
-    alignment: left
-    segments:
-      - type: executiontime
-        style: plain
-        foreground: "#A3BE8C"
-        template: " {{ .FormattedMs }} "
-        properties:
-          style: austin
-  - type: prompt
-    alignment: left
-    segments:
-      - type: status
-        style: plain
-        foreground: "#B48EAD"
-        foreground_templates:
-          - "{{ if gt .Code 0 }}#BF616A{{ end }}"
-        template: "❯ "
-        properties:
-          always_enabled: true
-    newline: true
 transient_prompt:
+  template: "❯ "
   foreground: "#B48EAD"
   foreground_templates:
+  - "{{ if gt .Code 0 }}#BF616A{{ end }}"
+console_title_template: "{{if .Root}}(Admin){{end}} {{.PWD}}"
+blocks:
+- type: prompt
+  alignment: left
+  segments:
+  - properties:
+      cache_duration: none
+    template: "{{ .UserName }} "
+    foreground: "#BF616A"
+    type: session
+    style: plain
+  - properties:
+      cache_duration: none
+      style: full
+    template: "{{ .Path }} "
+    foreground: "#81A1C1"
+    type: path
+    style: plain
+- type: prompt
+  alignment: left
+  segments:
+  - properties:
+      branch_ahead_icon: "<#88C0D0>⇡ </>"
+      branch_behind_icon: "<#88C0D0>⇣ </>"
+      branch_icon: ""
+      cache_duration: none
+      fetch_stash_count: true
+      fetch_status: true
+      fetch_upstream_icon: true
+      github_icon: ""
+    template: "{{ .UpstreamIcon }}{{ .HEAD }}{{if .BranchStatus }} {{ .BranchStatus }}{{ end }}{{ if .Working.Changed }}<#FFAFD7>*</>{{ .Working.String }}{{ end }}{{ if and (.Working.Changed) (.Staging.Changed) }} |{{ end }}{{ if .Staging.Changed }} \uf046 {{ .Staging.String }}{{ end }}{{ if gt .StashCount 0 }} \ueb4b {{ .StashCount }}{{ end }} "
+    foreground: "#6C6C6C"
+    type: git
+    style: plain
+- type: prompt
+  alignment: right
+  segments:
+  - properties:
+      cache_duration: none
+    template: "{{ if env \"AWS_PROFILE\" }}{{- env \"AWS_PROFILE\" -}}{{ end -}}"
+    foreground: "#81A1C1"
+    type: text
+    style: plain
+- type: prompt
+  alignment: left
+  segments:
+  - properties:
+      cache_duration: none
+      style: austin
+    template: " {{ .FormattedMs }} "
+    foreground: "#A3BE8C"
+    type: executiontime
+    style: plain
+- type: prompt
+  alignment: left
+  segments:
+  - properties:
+      always_enabled: true
+      cache_duration: none
+    template: "❯ "
+    foreground: "#B48EAD"
+    type: status
+    style: plain
+    foreground_templates:
     - "{{ if gt .Code 0 }}#BF616A{{ end }}"
-  template: "❯ "
+  newline: true
+version: 3
